# ShareSift

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: ablations.md  architecture.md  audit_2026-05-30.md  audit_2026-05-31.md  build_plan.md  diskforge_winshare_v1_results.md  generator_spec.md  goad_benchmark_methodology.md  journal.md  labeling_guidelines.md  methodology.md  pattern_taxonomy.md  pentester_backlog.md  snaffler_benchmark_2026-06.md  things_i_will_not_do.md  v0p10_content_docx_retrain.md  v0p11_linux_path_retrain.md  v0p12_metasploitable_test_spec.md  v0p13_literal_vs_referenced_spec.md  v0p14_results.md  v0p14_snaffler_beating_stack_spec.md  v0p15_goad_path_mining.md  v0p15_results.md  v0p16_results.md  v0p17_results.md  v0p18_results.md  v0p19_results.md  v0p19_themed_benchmark_plan.md  v0p20_content_determiner_plan.md  v0p20_results.md  v0p21_plan.md  v0p21_real_world_validation.md  v0p21_results.md  v0p22_results.md  v0p22_versatility_plan.md  v0p23_plan.md  v0p23_results.md  v0p24_plan.md  v0p24_results.md  v0p25_plan.md  (+34 more)
labeling_kit/: INSTRUCTIONS.md  PROMPT.md  chunk_01.txt  chunk_02.txt  chunk_03.txt  chunk_04.txt  chunk_05.txt  chunk_06.txt  chunk_07.txt  chunk_08.txt  chunk_09.txt  chunk_10.txt  chunk_11.txt  chunk_12.txt  everything.txt  seed.txt
labeling_kit_v0p9/: INSTRUCTIONS.md  PROMPT.md  chunk_01.txt  chunk_02.txt  chunk_03.txt  chunk_04.txt  chunk_05.txt  chunk_06.txt  chunk_07.txt  chunk_08.txt  chunk_09.txt  chunk_10.txt  chunk_11.txt  chunk_12.txt  chunk_13.txt  chunk_14.txt  chunk_15.txt  manifest.jsonl
models/: ranker_v0p14_msf3.joblib  ranker_v0p15_msf3_expanded.joblib  reranker_v0p21.joblib
reports/: ablate_content_classifier.json  ablate_path_classifier.json  ablate_path_seeds.json  audit_eval_integrity.json  calibration_audit.json  constructed_share_eval.json  content_predictions_v0p3.jsonl  creddata_training_kingfisher.jsonl  cross_source_eval.json  eval_content_classifier.json  kingfisher_validation_raw.jsonl  label_noise_audit.json  linux_rules_baseline.json  per_secret_type_audit.json  recalibration_audit.json  snaffler_comparison_ci.json  writeup_benchmark_eval.json
tests/: conftest.py  test_ad_discovery_v0p52.py  test_build_queue.py  test_cli_batch_v0p37.py  test_cli_smb_dispatch_v0p35.py  test_cli_to_snaffler_tsv_v0p36.py  test_content.py  test_content_determiner.py  test_content_rules.py  test_dfs_detection_v0p52.py  test_dfs_resolution_v0p53.py  test_discovery_v0p39.py  test_engagement_db_v0p40.py  test_eval_gate_compare.py  test_eval_harness.py  test_exclusions_v0p40.py  test_export_v0p46.py  test_extract.py  test_extract_v0p23.py  test_extract_v0p35.py  test_extractor_v0p23.py  test_gcp_diskforge_integration_v0p34.py  test_gcp_live_v0p33.py  test_gcp_v0p32.py  test_goad_benchmark_v0p53.py  test_guidelines_doc.py  test_hunt_v0p52.py  test_ingest_paste.py  test_io.py  test_kerberos_fixes_v0p55p1.py  test_label_app.py  test_max_file_size_v0p40.py  test_model.py  test_model_tier.py  test_negative_validator.py  test_output.py  test_parallel_reads_v0p38.py  test_parser_putty_ppk.py  test_parsers_v0p17.py  test_parsers_v0p24.py  (+45 more)
tools/: ablate_content_classifier.py  ablate_path_classifier.py  ablate_path_seeds.py  audit_eval_integrity.py  benchmark_content_classifier_cpu.py  bucket_snaffler_issues.py  build_constructed_share.py  build_constructed_share_path_aware.py  build_content_dataset.py  build_content_train_test_splits.py  build_creddata_benchmark.py  build_creddata_handlabel_corpus.py  build_creddata_training_corpus.py  build_diskforge_benchmark.py  build_docx_corpus_benchmark.py  build_msf2_benchmark.py  (+73 more)
(+342 files in other folders)
